Start replacing page titles with new page header that will align with the top nav, fix a text area proptype issue

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -44,12 +44,13 @@ body {
       "footer footer footer footer footer footer footer footer footer footer footer footer";
   }
 
-  header {
-    grid-row: header / auto;
-    grid-column: header;
-  }
+  //header {
+  //  grid-row: header / auto;
+  //  grid-column: header;
+  //}
 
   main {
+    padding-top: 6rem;
     grid-row: main / auto;
     grid-column: main;
 
