--- a/styles/modules/Policy.module.scss
+++ b/styles/modules/Policy.module.scss
@@ -54,13 +54,7 @@
 
 .heading {
   font-size: 1.25rem;
-  margin: 1rem 0;
   font-weight: 600;
-  text-align: center;
-
-  @include tabletAndLarger {
-    text-align: unset;
-  }
 }
 
 .policyInputsContainer {
